--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill-new": "^3.3.3",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-scroll": "^1.8.10",
