--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
