--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -25,6 +26,7 @@
     "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-heading": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
+    "@tiptap/extension-image": "^2.2.1",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/extension-paragraph": "^2.11.5",
     "@tiptap/extension-table": "^2.11.5",
@@ -49,11 +51,13 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.0",
     "react-quill-new": "^3.3.3",
     "react-scroll": "^1.9.0",
     "sass": "^1.84.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
